tests/src/frontend/typechecking/invalid/infer_frozen_fun_3.sk
fun foo<T: frozen>(Array<T>, T): void {
  void
}
fun test(): void {
  foo(Array[], mutable Array[])
}
